tests/ui/where-clauses/higher-ranked-fn-type.verbose.stderr
error[E0277]: the trait bound `for<Region(BrNamed(DefId(0:8 ~ higher_ranked_fn_type[9e51]::caller::'a)))> fn(&'^0.Named(DefId(0:8 ~ higher_ranked_fn_type[9e51]::caller::'a)) ()): Foo` is not satisfied
  --> $DIR/higher-ranked-fn-type.rs:18:5
   |
LL |     (for<'a> fn(&'a ())): Foo,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
   = help: the trait `Foo` is not implemented for `for<Region(BrNamed(DefId(0:8 ~ higher_ranked_fn_type[9e51]::caller::'a)))> fn(&'^0.Named(DefId(0:8 ~ higher_ranked_fn_type[9e51]::caller::'a)) ())`
help: this trait has no implementations, consider adding one
  --> $DIR/higher-ranked-fn-type.rs:6:1
   |
LL | trait Foo {
   | ^^^^^^^^^
help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   |
LL + #![feature(trivial_bounds)]
   |

error[E0277]: the trait bound `for<Region(BrNamed(DefId(0:6 ~ higher_ranked_fn_type[9e51]::called::'b)))> fn(&'^1_0.Named(DefId(0:6 ~ higher_ranked_fn_type[9e51]::called::'b)) ()): Foo` is not satisfied
  --> $DIR/higher-ranked-fn-type.rs:22:5
   |
LL |     called()
   |     ^^^^^^^^ unsatisfied trait bound
   |
   = help: the trait `for<Region(BrNamed(DefId(0:6 ~ higher_ranked_fn_type[9e51]::called::'b)))> Foo` is not implemented for `fn(&'^1_0.Named(DefId(0:6 ~ higher_ranked_fn_type[9e51]::called::'b)) ())`
help: this trait has no implementations, consider adding one
  --> $DIR/higher-ranked-fn-type.rs:6:1
   |
LL | trait Foo {
   | ^^^^^^^^^
note: required by a bound in `called`
  --> $DIR/higher-ranked-fn-type.rs:12:25
   |
LL | fn called()
   |    ------ required by a bound in this function
LL | where
LL |     for<'b> fn(&'b ()): Foo,
   |                         ^^^ required by this bound in `called`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
